[project]
name = "clarityio"
version = "0.3.0"
description = "Retrieve air quality data from the Clarity.io API"
authors = [
  { name="Sam Firke", email="samuel.firke@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.0.0",
  "pytest>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[project.urls]
Homepage = "https://github.com/a2gov/clarityio"
Issues = "https://github.com/a2gov/clarityio/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.test]
dependencies = [
  "pytest>=6.0.0",
]